# big-numbers

./: .gitignore  CMakeLists.txt  README.md  bigint.cpp  bigint.h  main.cpp  simpleBigInt.cpp  simpleBigInt.h
debug/: BigFloatDebugger.cpp  BigFloatDebugger.h  BigIntDebugger.cpp  BigIntDebugger.h  CMakeLists.txt  big_float_debugger.cpp  big_float_debugger.h  big_int_debugger.cpp  big_int_debugger.h
src/: BigFloat.cpp  BigFloat.h  BigFloat.hpp  BigFloatBackend.cpp  BigFloatBackend.h  BigFloatBackend.hpp  BigFloatMath.cpp  BigFloatMath.h  BigInt.cpp  BigInt.h  BigInt.hpp  BigIntBackend.cpp  BigIntBackend.h  BigIntBackend.hpp  CMakeLists.txt  DoubleEndedPolynomial.cpp  DoubleEndedPolynomial.h  IsomorphicMath.h  IsomorphicMath.hpp  Padding.cpp  Padding.hpp  ParsingUtils.cpp  ParsingUtils.h  VectorUtils.h  big_float.cpp  big_float.hpp  big_int.cpp  big_int.hpp  big_int_debugger.cpp  big_int_debugger.h  config.h  padding.cpp  padding.hpp  parsing_utils.cpp  parsing_utils.h
tests/: CMakeLists.txt  float_parse.cpp  int_division.cpp  int_leftshift.cpp  int_modulo.cpp  int_multiplication.cpp  int_subtract.cpp  int_sum.cpp  utils.h
tests/big_float/: CMakeLists.txt  compare.test.cpp  division.test.cpp  multiplication.test.cpp  parse.test.cpp  print.test.cpp  subtract.test.cpp  sum.test.cpp
tests/big_int/: CMakeLists.txt  byteConv.test.cpp  cast.test.cpp  division.test.cpp  factorial.test.cpp  factorial.txt  leftshift.test.cpp  modulo.test.cpp  multiplication.test.cpp  negate.test.cpp  print.test.cpp  subtract.test.cpp  sum.test.cpp
tests/dep/: CMakeLists.txt  insert.test.cpp
tests/e2e/: CMakeLists.txt  factorial-float.txt  factorial.test.cpp  factorial.txt  findNextPrime.test.cpp  ln.test.cpp  ln.txt  pi.test.cpp  pi.txt  pow.test.cpp  sin.test.cpp  sin.txt  sqrt.test.cpp
